--- a/output.css
+++ b/output.css
@@ -566,8 +566,12 @@ video {
   margin: 0px;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.-mt-\[1rem\] {
+  margin-top: -1rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .box-border {
@@ -576,6 +580,18 @@ video {
 
 .flex {
   display: flex;
+}
+
+.h-\[0\.2rem\] {
+  height: 0.2rem;
+}
+
+.h-\[16rem\] {
+  height: 16rem;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-full {
@@ -590,8 +606,16 @@ video {
   width: 1.5rem;
 }
 
+.w-\[4rem\] {
+  width: 4rem;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .flex-row {
@@ -600,6 +624,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
@@ -614,8 +642,8 @@ video {
   justify-content: center;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-4 {
@@ -626,6 +654,10 @@ video {
   gap: 1.5rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -633,6 +665,11 @@ video {
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(226 31 39 / var(--tw-bg-opacity, 1));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 131 14 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-tr {
@@ -673,9 +710,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .py-4 {
@@ -691,10 +728,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -706,6 +739,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -737,4 +775,44 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+@media (min-width: 768px) {
+  .md\:h-96 {
+    height: 24rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:h-\[32rem\] {
+    height: 32rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:h-\[40rem\] {
+    height: 40rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:h-\[48rem\] {
+    height: 48rem;
+  }
+}
+
+@media (min-width: 1920px) {
+  .\33xl\:h-\[56rem\] {
+    height: 56rem;
+  }
+}
+
+@media (min-width: 2560px) {
+  .\34xl\:h-\[64rem\] {
+    height: 64rem;
+  }
 }
