--- a/output.css
+++ b/output.css
@@ -574,6 +574,10 @@ video {
   margin-top: -1rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -588,6 +592,10 @@ video {
 
 .table {
   display: table;
+}
+
+.hidden {
+  display: none;
 }
 
 .size-2 {
@@ -639,6 +647,10 @@ video {
   width: 100vw;
 }
 
+.max-w-4xl {
+  max-width: 56rem;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -671,8 +683,8 @@ video {
   justify-content: center;
 }
 
-.justify-items-center {
-  justify-items: center;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-12 {
@@ -695,10 +707,6 @@ video {
   gap: 2rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .self-start {
   align-self: flex-start;
 }
@@ -713,6 +721,15 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#9A0006\] {
@@ -735,16 +752,6 @@ video {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity, 1));
 }
 
-.bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#8F4c08\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(143 76 8 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -753,8 +760,10 @@ video {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+.from-\[\#E21F27\] {
+  --tw-gradient-from: #E21F27 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(226 31 39 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-primary {
@@ -774,62 +783,16 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), rgb(255 255 255 / 0.9) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.via-\[\] {
-  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from),  var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-\[\#\] {
-  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), # var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-\[\#8F\] {
-  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #8F var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-\[\#8F4\] {
-  --tw-gradient-to: rgb(136 255 68 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #8F4 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-\[\#8F4C\] {
-  --tw-gradient-to: rgb(136 255 68 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #8F4C var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-\[\#8F4C08\] {
-  --tw-gradient-to: rgb(143 76 8 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #8F4C08 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-white\/10 {
-  --tw-gradient-to: rgb(255 255 255 / 0.1) var(--tw-gradient-to-position);
-}
-
-.to-\[\A3\] {
-  --tw-gradient-to: £ var(--tw-gradient-to-position);
-}
-
-.to-\[\#\] {
-  --tw-gradient-to: # var(--tw-gradient-to-position);
-}
-
-.to-\[\#8\] {
-  --tw-gradient-to: #8 var(--tw-gradient-to-position);
-}
-
-.to-\[\#8F\] {
-  --tw-gradient-to: #8F var(--tw-gradient-to-position);
-}
-
 .to-\[\#8F4c08\] {
   --tw-gradient-to: #8F4c08 var(--tw-gradient-to-position);
 }
 
-.to-\[\#8F4C08\] {
-  --tw-gradient-to: #8F4C08 var(--tw-gradient-to-position);
+.to-primary {
+  --tw-gradient-to: #E21F27 var(--tw-gradient-to-position);
+}
+
+.to-white\/10 {
+  --tw-gradient-to: rgb(255 255 255 / 0.1) var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -855,6 +818,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -865,9 +833,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pl-4 {
@@ -880,6 +847,10 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -900,19 +871,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -955,10 +921,6 @@ video {
 
 .opacity-90 {
   opacity: 0.9;
-}
-
-.first-line\:flex::first-line {
-  display: flex;
 }
 
 @media (min-width: 768px) {
