--- a/output.css
+++ b/output.css
@@ -647,6 +647,14 @@ video {
   width: 100vw;
 }
 
+.w-\[30rem\] {
+  width: 30rem;
+}
+
+.w-\[50rem\] {
+  width: 50rem;
+}
+
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -1341,6 +1349,10 @@ video {
     width: 75rem;
   }
 
+  .\33xl\:w-12 {
+    width: 3rem;
+  }
+
   .\33xl\:gap-12 {
     gap: 3rem;
   }
@@ -1354,6 +1366,11 @@ video {
     padding-right: 15rem;
   }
 
+  .\33xl\:px-\[30rem\] {
+    padding-left: 30rem;
+    padding-right: 30rem;
+  }
+
   .\33xl\:pr-\[45rem\] {
     padding-right: 45rem;
   }
@@ -1364,6 +1381,34 @@ video {
 
   .\33xl\:pt-12 {
     padding-top: 3rem;
+  }
+
+  .\33xl\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .\33xl\:pt-\[0\.2rem\] {
+    padding-top: 0.2rem;
+  }
+
+  .\33xl\:pt-\[0\.4rem\] {
+    padding-top: 0.4rem;
+  }
+
+  .\33xl\:pt-\[1rem\] {
+    padding-top: 1rem;
+  }
+
+  .\33xl\:pt-\[1\.1rem\] {
+    padding-top: 1.1rem;
+  }
+
+  .\33xl\:pt-\[2rem\] {
+    padding-top: 2rem;
+  }
+
+  .\33xl\:pt-\[1\.8rem\] {
+    padding-top: 1.8rem;
   }
 
   .\33xl\:text-2xl {
@@ -1391,6 +1436,16 @@ video {
     line-height: 1;
   }
 
+  .\33xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .\33xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .\33xl\:leading-\[3\.5rem\] {
     line-height: 3.5rem;
   }
@@ -1405,6 +1460,10 @@ video {
 
   .\33xl\:leading-\[6rem\] {
     line-height: 6rem;
+  }
+
+  .\33xl\:leading-\[3rem\] {
+    line-height: 3rem;
   }
 }
 
