--- a/output.css
+++ b/output.css
@@ -647,12 +647,36 @@ video {
   width: 100vw;
 }
 
-.w-\[30rem\] {
-  width: 30rem;
+.w-\[20rem\] {
+  width: 20rem;
 }
 
 .w-\[50rem\] {
   width: 50rem;
+}
+
+.w-\[70rem\] {
+  width: 70rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
+}
+
+.w-\[25rem\] {
+  width: 25rem;
+}
+
+.w-\[22rem\] {
+  width: 22rem;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
 }
 
 .max-w-4xl {
@@ -796,6 +820,11 @@ video {
 .via-white\/90 {
   --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), rgb(255 255 255 / 0.9) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-secondary {
+  --tw-gradient-to: rgb(245 131 14 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #F5830E var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .to-\[\#8F4C08\] {
@@ -1241,6 +1270,10 @@ video {
     padding-top: 2.3rem;
   }
 
+  .xl\:pt-\[2rem\] {
+    padding-top: 2rem;
+  }
+
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1333,6 +1366,87 @@ video {
 }
 
 @media (min-width: 1920px) {
+  .\33xl\:-mt-\[0\.5rem\] {
+    margin-top: -0.5rem;
+  }
+
+  .\33xl\:-mt-\[1rem\] {
+    margin-top: -1rem;
+  }
+
+  .\33xl\:mt-\[1rem\] {
+    margin-top: 1rem;
+  }
+
+  .\33xl\:mt-\[1\.5rem\] {
+    margin-top: 1.5rem;
+  }
+
+  .\33xl\:mt-\[1\.3rem\] {
+    margin-top: 1.3rem;
+  }
+
+  .\33xl\:mt-\[1\.2rem\] {
+    margin-top: 1.2rem;
+  }
+
+  .\33xl\:mt-\[1\.1rem\] {
+    margin-top: 1.1rem;
+  }
+
+  .\33xl\:ml-\[\] {
+    margin-left: ;
+  }
+
+  .\33xl\:ml-\[10rem\] {
+    margin-left: 10rem;
+  }
+
+  .\33xl\:ml-\[11rem\] {
+    margin-left: 11rem;
+  }
+
+  .\33xl\:mt-\[\] {
+    margin-top: ;
+  }
+
+  .\33xl\:mt-\[5rem\] {
+    margin-top: 5rem;
+  }
+
+  .\33xl\:mt-\[10rem\] {
+    margin-top: 10rem;
+  }
+
+  .\33xl\:mt-\[4rem\] {
+    margin-top: 4rem;
+  }
+
+  .\33xl\:mt-\[3rem\] {
+    margin-top: 3rem;
+  }
+
+  .\33xl\:ml-4 {
+    margin-left: 1rem;
+  }
+
+  .\33xl\:ml-1 {
+    margin-left: 0.25rem;
+  }
+
+  .\33xl\:ml-12 {
+    margin-left: 3rem;
+  }
+
+  .\33xl\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .\33xl\:size-4 {
+    width: 1rem;
+    height: 1rem;
+  }
+
   .\33xl\:h-\[56rem\] {
     height: 56rem;
   }
@@ -1349,8 +1463,40 @@ video {
     width: 75rem;
   }
 
+  .\33xl\:w-10 {
+    width: 2.5rem;
+  }
+
+  .\33xl\:w-\[25rem\] {
+    width: 25rem;
+  }
+
   .\33xl\:w-12 {
     width: 3rem;
+  }
+
+  .\33xl\:w-full {
+    width: 100%;
+  }
+
+  .\33xl\:w-\[\] {
+    width: ;
+  }
+
+  .\33xl\:w-\[80rem\] {
+    width: 80rem;
+  }
+
+  .\33xl\:w-\[90rem\] {
+    width: 90rem;
+  }
+
+  .\33xl\:max-w-5xl {
+    max-width: 64rem;
+  }
+
+  .\33xl\:max-w-6xl {
+    max-width: 72rem;
   }
 
   .\33xl\:gap-12 {
@@ -1361,14 +1507,122 @@ video {
     gap: 2rem;
   }
 
+  .\33xl\:gap-16 {
+    gap: 4rem;
+  }
+
+  .\33xl\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .\33xl\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .\33xl\:gap-32 {
+    gap: 8rem;
+  }
+
+  .\33xl\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\33xl\:gap-48 {
+    gap: 12rem;
+  }
+
+  .\33xl\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
   .\33xl\:px-\[15rem\] {
     padding-left: 15rem;
     padding-right: 15rem;
   }
 
+  .\33xl\:px-\[\] {
+    padding-left: ;
+    padding-right: ;
+  }
+
+  .\33xl\:px-\[40rem\] {
+    padding-left: 40rem;
+    padding-right: 40rem;
+  }
+
   .\33xl\:px-\[30rem\] {
     padding-left: 30rem;
     padding-right: 30rem;
+  }
+
+  .\33xl\:px-\[10rem\] {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .\33xl\:px-\[5rem\] {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .\33xl\:px-\[12rem\] {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
+  .\33xl\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .\33xl\:px-\[8rem\] {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .\33xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .\33xl\:px-\[7rem\] {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .\33xl\:px-\[20rem\] {
+    padding-left: 20rem;
+    padding-right: 20rem;
+  }
+
+  .\33xl\:px-\[22rem\] {
+    padding-left: 22rem;
+    padding-right: 22rem;
+  }
+
+  .\33xl\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .\33xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .\33xl\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+  }
+
+  .\33xl\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .\33xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .\33xl\:pr-\[45rem\] {
@@ -1387,28 +1641,24 @@ video {
     padding-top: 0px;
   }
 
-  .\33xl\:pt-\[0\.2rem\] {
-    padding-top: 0.2rem;
+  .\33xl\:pt-\[2rem\] {
+    padding-top: 2rem;
   }
 
-  .\33xl\:pt-\[0\.4rem\] {
-    padding-top: 0.4rem;
+  .\33xl\:pt-\[2\.2rem\] {
+    padding-top: 2.2rem;
+  }
+
+  .\33xl\:pt-\[\] {
+    padding-top: ;
   }
 
   .\33xl\:pt-\[1rem\] {
     padding-top: 1rem;
   }
 
-  .\33xl\:pt-\[1\.1rem\] {
-    padding-top: 1.1rem;
-  }
-
-  .\33xl\:pt-\[2rem\] {
+  .\33xl\:pt-8 {
     padding-top: 2rem;
-  }
-
-  .\33xl\:pt-\[1\.8rem\] {
-    padding-top: 1.8rem;
   }
 
   .\33xl\:text-2xl {
@@ -1436,11 +1686,6 @@ video {
     line-height: 1;
   }
 
-  .\33xl\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .\33xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1462,8 +1707,44 @@ video {
     line-height: 6rem;
   }
 
+  .\33xl\:leading-\[2\.3rem\] {
+    line-height: 2.3rem;
+  }
+
+  .\33xl\:leading-\[\] {
+    line-height: ;
+  }
+
+  .\33xl\:leading-\[2\.5rem\] {
+    line-height: 2.5rem;
+  }
+
   .\33xl\:leading-\[3rem\] {
     line-height: 3rem;
+  }
+
+  .\33xl\:leading-\[2\.rem\] {
+    line-height: 2.rem;
+  }
+
+  .\33xl\:leading-\[2rem\] {
+    line-height: 2rem;
+  }
+
+  .\33xl\:leading-\[5rem\] {
+    line-height: 5rem;
+  }
+
+  .\33xl\:leading-\[3\.\] {
+    line-height: 3.;
+  }
+
+  .\33xl\:leading-\[3\.8rem\] {
+    line-height: 3.8rem;
+  }
+
+  .\33xl\:leading-3 {
+    line-height: .75rem;
   }
 }
 
@@ -1528,6 +1809,15 @@ video {
 
   .\34xl\:leading-\[8rem\] {
     line-height: 8rem;
+  }
+}
+
+@media (min-width: 1920px) {
+  @media (min-width: 3840px) {
+    .\33xl\:5xl\:px-\[30rem\] {
+      padding-left: 30rem;
+      padding-right: 30rem;
+    }
   }
 }
 
