--- a/output.css
+++ b/output.css
@@ -635,8 +635,16 @@ video {
   width: 18rem;
 }
 
+.w-\[22rem\] {
+  width: 22rem;
+}
+
 .w-\[4rem\] {
   width: 4rem;
+}
+
+.w-\[70rem\] {
+  width: 70rem;
 }
 
 .w-full {
@@ -647,36 +655,12 @@ video {
   width: 100vw;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[50rem\] {
-  width: 50rem;
-}
-
-.w-\[70rem\] {
-  width: 70rem;
-}
-
 .w-\[\] {
   width: ;
 }
 
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
-.w-\[15rem\] {
-  width: 15rem;
+.w-\[35rem\] {
+  width: 35rem;
 }
 
 .max-w-4xl {
@@ -785,6 +769,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -817,14 +806,14 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-white\/90 {
-  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(255 255 255 / 0.9) var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
 .via-secondary {
   --tw-gradient-to: rgb(245 131 14 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #F5830E var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-white\/90 {
+  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(255 255 255 / 0.9) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .to-\[\#8F4C08\] {
@@ -903,11 +892,6 @@ video {
 
 .font-main {
   font-family: Roboto, serif;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl {
@@ -1075,10 +1059,6 @@ video {
     padding-right: 14rem;
   }
 
-  .lg\:pt-6 {
-    padding-top: 1.5rem;
-  }
-
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1110,6 +1090,10 @@ video {
 
   .xl\:mt-6 {
     margin-top: 1.5rem;
+  }
+
+  .xl\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .xl\:size-3 {
@@ -1370,76 +1354,24 @@ video {
     margin-top: -0.5rem;
   }
 
-  .\33xl\:-mt-\[1rem\] {
-    margin-top: -1rem;
-  }
-
-  .\33xl\:mt-\[1rem\] {
-    margin-top: 1rem;
-  }
-
-  .\33xl\:mt-\[1\.5rem\] {
-    margin-top: 1.5rem;
-  }
-
-  .\33xl\:mt-\[1\.3rem\] {
-    margin-top: 1.3rem;
-  }
-
-  .\33xl\:mt-\[1\.2rem\] {
-    margin-top: 1.2rem;
-  }
-
-  .\33xl\:mt-\[1\.1rem\] {
-    margin-top: 1.1rem;
-  }
-
-  .\33xl\:ml-\[\] {
-    margin-left: ;
-  }
-
-  .\33xl\:ml-\[10rem\] {
-    margin-left: 10rem;
+  .\33xl\:ml-12 {
+    margin-left: 3rem;
   }
 
   .\33xl\:ml-\[11rem\] {
     margin-left: 11rem;
   }
 
-  .\33xl\:mt-\[\] {
-    margin-top: ;
+  .\33xl\:mt-10 {
+    margin-top: 2.5rem;
   }
 
-  .\33xl\:mt-\[5rem\] {
-    margin-top: 5rem;
-  }
-
-  .\33xl\:mt-\[10rem\] {
-    margin-top: 10rem;
-  }
-
-  .\33xl\:mt-\[4rem\] {
-    margin-top: 4rem;
+  .\33xl\:mt-\[1\.1rem\] {
+    margin-top: 1.1rem;
   }
 
   .\33xl\:mt-\[3rem\] {
     margin-top: 3rem;
-  }
-
-  .\33xl\:ml-4 {
-    margin-left: 1rem;
-  }
-
-  .\33xl\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
-  .\33xl\:ml-12 {
-    margin-left: 3rem;
-  }
-
-  .\33xl\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .\33xl\:size-4 {
@@ -1451,6 +1383,10 @@ video {
     height: 56rem;
   }
 
+  .\33xl\:w-12 {
+    width: 3rem;
+  }
+
   .\33xl\:w-14 {
     width: 3.5rem;
   }
@@ -1459,68 +1395,36 @@ video {
     width: 4rem;
   }
 
-  .\33xl\:w-\[75rem\] {
-    width: 75rem;
-  }
-
-  .\33xl\:w-10 {
-    width: 2.5rem;
-  }
-
   .\33xl\:w-\[25rem\] {
     width: 25rem;
   }
 
-  .\33xl\:w-12 {
-    width: 3rem;
-  }
-
-  .\33xl\:w-full {
-    width: 100%;
-  }
-
-  .\33xl\:w-\[\] {
-    width: ;
-  }
-
-  .\33xl\:w-\[80rem\] {
-    width: 80rem;
+  .\33xl\:w-\[75rem\] {
+    width: 75rem;
   }
 
   .\33xl\:w-\[90rem\] {
     width: 90rem;
   }
 
-  .\33xl\:max-w-5xl {
-    max-width: 64rem;
+  .\33xl\:w-\[22rem\] {
+    width: 22rem;
   }
 
   .\33xl\:max-w-6xl {
     max-width: 72rem;
   }
 
-  .\33xl\:gap-12 {
-    gap: 3rem;
-  }
-
-  .\33xl\:gap-8 {
-    gap: 2rem;
-  }
-
-  .\33xl\:gap-16 {
-    gap: 4rem;
-  }
-
   .\33xl\:gap-10 {
     gap: 2.5rem;
   }
 
-  .\33xl\:gap-3 {
-    gap: 0.75rem;
+  .\33xl\:gap-12 {
+    gap: 3rem;
   }
 
-  .\33xl\:gap-32 {
-    gap: 8rem;
+  .\33xl\:gap-16 {
+    gap: 4rem;
   }
 
   .\33xl\:gap-4 {
@@ -1531,43 +1435,8 @@ video {
     gap: 12rem;
   }
 
-  .\33xl\:rounded-lg {
-    border-radius: 0.5rem;
-  }
-
-  .\33xl\:px-\[15rem\] {
-    padding-left: 15rem;
-    padding-right: 15rem;
-  }
-
-  .\33xl\:px-\[\] {
-    padding-left: ;
-    padding-right: ;
-  }
-
-  .\33xl\:px-\[40rem\] {
-    padding-left: 40rem;
-    padding-right: 40rem;
-  }
-
-  .\33xl\:px-\[30rem\] {
-    padding-left: 30rem;
-    padding-right: 30rem;
-  }
-
-  .\33xl\:px-\[10rem\] {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-
-  .\33xl\:px-\[5rem\] {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
-  .\33xl\:px-\[12rem\] {
-    padding-left: 12rem;
-    padding-right: 12rem;
+  .\33xl\:gap-8 {
+    gap: 2rem;
   }
 
   .\33xl\:px-14 {
@@ -1575,24 +1444,24 @@ video {
     padding-right: 3.5rem;
   }
 
-  .\33xl\:px-\[8rem\] {
-    padding-left: 8rem;
-    padding-right: 8rem;
+  .\33xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
-  .\33xl\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+  .\33xl\:px-\[10rem\] {
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 
-  .\33xl\:px-\[7rem\] {
-    padding-left: 7rem;
-    padding-right: 7rem;
+  .\33xl\:px-\[12rem\] {
+    padding-left: 12rem;
+    padding-right: 12rem;
   }
 
-  .\33xl\:px-\[20rem\] {
-    padding-left: 20rem;
-    padding-right: 20rem;
+  .\33xl\:px-\[15rem\] {
+    padding-left: 15rem;
+    padding-right: 15rem;
   }
 
   .\33xl\:px-\[22rem\] {
@@ -1600,29 +1469,14 @@ video {
     padding-right: 22rem;
   }
 
-  .\33xl\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .\33xl\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
+  .\33xl\:px-\[7rem\] {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
   .\33xl\:py-14 {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
-  }
-
-  .\33xl\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  .\33xl\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .\33xl\:pr-\[45rem\] {
@@ -1633,32 +1487,24 @@ video {
     padding-right: 50rem;
   }
 
-  .\33xl\:pt-12 {
-    padding-top: 3rem;
-  }
-
   .\33xl\:pt-0 {
     padding-top: 0px;
   }
 
-  .\33xl\:pt-\[2rem\] {
+  .\33xl\:pt-12 {
+    padding-top: 3rem;
+  }
+
+  .\33xl\:pt-8 {
     padding-top: 2rem;
-  }
-
-  .\33xl\:pt-\[2\.2rem\] {
-    padding-top: 2.2rem;
-  }
-
-  .\33xl\:pt-\[\] {
-    padding-top: ;
   }
 
   .\33xl\:pt-\[1rem\] {
     padding-top: 1rem;
   }
 
-  .\33xl\:pt-8 {
-    padding-top: 2rem;
+  .\33xl\:pt-\[2\.2rem\] {
+    padding-top: 2.2rem;
   }
 
   .\33xl\:text-2xl {
@@ -1691,8 +1537,16 @@ video {
     line-height: 1.75rem;
   }
 
+  .\33xl\:leading-\[2\.3rem\] {
+    line-height: 2.3rem;
+  }
+
   .\33xl\:leading-\[3\.5rem\] {
     line-height: 3.5rem;
+  }
+
+  .\33xl\:leading-\[3rem\] {
+    line-height: 3rem;
   }
 
   .\33xl\:leading-\[4\.3rem\] {
@@ -1706,55 +1560,113 @@ video {
   .\33xl\:leading-\[6rem\] {
     line-height: 6rem;
   }
-
-  .\33xl\:leading-\[2\.3rem\] {
-    line-height: 2.3rem;
-  }
-
-  .\33xl\:leading-\[\] {
-    line-height: ;
-  }
-
-  .\33xl\:leading-\[2\.5rem\] {
-    line-height: 2.5rem;
-  }
-
-  .\33xl\:leading-\[3rem\] {
-    line-height: 3rem;
-  }
-
-  .\33xl\:leading-\[2\.rem\] {
-    line-height: 2.rem;
-  }
-
-  .\33xl\:leading-\[2rem\] {
-    line-height: 2rem;
-  }
-
-  .\33xl\:leading-\[5rem\] {
-    line-height: 5rem;
-  }
-
-  .\33xl\:leading-\[3\.\] {
-    line-height: 3.;
-  }
-
-  .\33xl\:leading-\[3\.8rem\] {
-    line-height: 3.8rem;
-  }
-
-  .\33xl\:leading-3 {
-    line-height: .75rem;
-  }
 }
 
 @media (min-width: 2560px) {
+  .\34xl\:mt-\[1rem\] {
+    margin-top: 1rem;
+  }
+
+  .\34xl\:mt-\[1\.2rem\] {
+    margin-top: 1.2rem;
+  }
+
+  .\34xl\:ml-\[20rem\] {
+    margin-left: 20rem;
+  }
+
+  .\34xl\:ml-\[2rem\] {
+    margin-left: 2rem;
+  }
+
+  .\34xl\:ml-\[30rem\] {
+    margin-left: 30rem;
+  }
+
+  .\34xl\:ml-\[25rem\] {
+    margin-left: 25rem;
+  }
+
+  .\34xl\:ml-\[26rem\] {
+    margin-left: 26rem;
+  }
+
+  .\34xl\:size-8 {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .\34xl\:size-6 {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
   .\34xl\:h-\[64rem\] {
     height: 64rem;
   }
 
+  .\34xl\:h-full {
+    height: 100%;
+  }
+
   .\34xl\:w-\[100rem\] {
     width: 100rem;
+  }
+
+  .\34xl\:w-\[\] {
+    width: ;
+  }
+
+  .\34xl\:w-\[35rem\] {
+    width: 35rem;
+  }
+
+  .\34xl\:w-24 {
+    width: 6rem;
+  }
+
+  .\34xl\:w-\[80rem\] {
+    width: 80rem;
+  }
+
+  .\34xl\:w-2 {
+    width: 0.5rem;
+  }
+
+  .\34xl\:w-\[5rem\] {
+    width: 5rem;
+  }
+
+  .\34xl\:w-\[45rem\] {
+    width: 45rem;
+  }
+
+  .\34xl\:w-12 {
+    width: 3rem;
+  }
+
+  .\34xl\:w-full {
+    width: 100%;
+  }
+
+  .\34xl\:w-1\/2 {
+    width: 50%;
+  }
+
+  .\34xl\:w-screen {
+    width: 100vw;
+  }
+
+  .\34xl\:w-\[1\] {
+    width: 1;
+  }
+
+  .\34xl\:w-\[30rem\] {
+    width: 30rem;
+  }
+
+  .\34xl\:w-\[40rem\] {
+    width: 40rem;
   }
 
   .\34xl\:gap-20 {
@@ -1763,6 +1675,34 @@ video {
 
   .\34xl\:gap-52 {
     gap: 13rem;
+  }
+
+  .\34xl\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .\34xl\:gap-24 {
+    gap: 6rem;
+  }
+
+  .\34xl\:gap-16 {
+    gap: 4rem;
+  }
+
+  .\34xl\:gap-8 {
+    gap: 2rem;
+  }
+
+  .\34xl\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\34xl\:gap-14 {
+    gap: 3.5rem;
+  }
+
+  .\34xl\:gap-1 {
+    gap: 0.25rem;
   }
 
   .\34xl\:px-\[20rem\] {
@@ -1775,8 +1715,40 @@ video {
     padding-bottom: 4rem;
   }
 
+  .\34xl\:px-\[15rem\] {
+    padding-left: 15rem;
+    padding-right: 15rem;
+  }
+
+  .\34xl\:px-\[25rem\] {
+    padding-left: 25rem;
+    padding-right: 25rem;
+  }
+
+  .\34xl\:px-\[30rem\] {
+    padding-left: 30rem;
+    padding-right: 30rem;
+  }
+
+  .\34xl\:px-\[\] {
+    padding-left: ;
+    padding-right: ;
+  }
+
   .\34xl\:pr-\[65rem\] {
     padding-right: 65rem;
+  }
+
+  .\34xl\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .\34xl\:pt-\[1\.9rem\] {
+    padding-top: 1.9rem;
+  }
+
+  .\34xl\:pt-\[1\.8rem\] {
+    padding-top: 1.8rem;
   }
 
   .\34xl\:text-3xl {
@@ -1799,6 +1771,16 @@ video {
     line-height: 1;
   }
 
+  .\34xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\34xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .\34xl\:leading-\[4rem\] {
     line-height: 4rem;
   }
@@ -1810,14 +1792,25 @@ video {
   .\34xl\:leading-\[8rem\] {
     line-height: 8rem;
   }
-}
 
-@media (min-width: 1920px) {
-  @media (min-width: 3840px) {
-    .\33xl\:5xl\:px-\[30rem\] {
-      padding-left: 30rem;
-      padding-right: 30rem;
-    }
+  .\34xl\:leading-\[5rem\] {
+    line-height: 5rem;
+  }
+
+  .\34xl\:leading-\[4\.5rem\] {
+    line-height: 4.5rem;
+  }
+
+  .\34xl\:leading-normal {
+    line-height: 1.5;
+  }
+
+  .\34xl\:leading-\[\] {
+    line-height: ;
+  }
+
+  .\34xl\:leading-\[3rem\] {
+    line-height: 3rem;
   }
 }
 
